--- a/TestPlugin.csproj
+++ b/TestPlugin.csproj
@@ -5,8 +5,8 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>TestPlugin</RootNamespace>
-    <AssemblyName>TestPlugin</AssemblyName>
+    <RootNamespace>BTControl</RootNamespace>
+    <AssemblyName>BTControl</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <NoWin32Manifest>False</NoWin32Manifest>
@@ -44,7 +44,7 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <OutputPath>..\VM Slide Explorer 4.0\</OutputPath>
+    <OutputPath>..\..\Studium\AI Master\Semester2\03 MedicalImageProcessing\VM Slide Explorer 4.0\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="#Accessory">
@@ -102,7 +102,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BTConnect.cs" />
+    <Compile Include="BTControl.cs" />
     <Compile Include="BTHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
